# chainlit-nextjs

backend/: README.md  pyproject.toml
backend/app/: chain_lit.py  main.py
backend/tests/: test_main.py
web/: README.md  auth.ts  next.config.ts  package.json  pnpm-lock.yaml
web/apis/: users.ts
web/app/: icon.tsx  layout.tsx  page.tsx
web/app/components/: chain-lit-list.tsx
web/components/provider/: index.tsx
web/lib/: constants.ts  request-api.ts  request.ts
web/lib/chain-lit-react-client/src/: useChatInteract.ts  useChatSession.ts
web/lib/chain-lit-react-client/src/api/: index.tsx
web/lib/chain-lit-react-client/src/api/hooks/: api.ts
web/lib/chain-lit-react-client/src/api/hooks/auth/: config.ts  index.ts  sessionManagement.ts  state.ts  types.ts  userManagement.ts
web/lib/chain-lit-react-client/src/store/: auth.ts  chat.ts  messages.ts  user.ts
web/lib/chain-lit-react-client/src/types/: history.ts
web/lib/chain-lit-react-client/src/utils/: group.ts
web/service/: auth.ts
web/types/: auth.ts  common.ts  user.ts
